--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -823,15 +823,19 @@ button.--usr-rst::before {
       <li id="js-usr-rst" class="select__label">忘记密码</li>
     </ul>
     <span class="pointer"></span>
-    <input type="text" placeholder="昵称" class="ui1-field" id="name" />
-    <input type="text" placeholder="邮箱" class="ui-field" id="js-field__email" />
+    <input type="text" placeholder="昵称" class="ui1-field" id="name" name="name"/>
+    <input type="text" placeholder="邮箱" class="ui-field" id="js-field__email" name="email"/>
     <div>
-    <input type="email" placeholder="验证码" class="ui1-field" id="send__email" />
-    <button id="sendMail" class="ui2-field get-code-btn">获取验证码</button>
+    <input type="email" placeholder="验证码" class="ui1-field" id="registerCode" />
+    <a th:href="@{/sendEmail}" class="ui-button --usr-new" id="send_Email">获取验证码</a>
+    <!--<button id="sendMail" class="ui2-field get-code-btn" th:href="@{/sendEmail}">获取验证码</button>-->
+    <!--<input type="button" id="sendMail" class="ui2-field get-code-btn" href="index.html" value="aaaa" />-->
     </div>
     <input type="password" placeholder="密码" class="ui-field" id="js-field__pass" />
     <input type="password" placeholder="确认密码" class="ui-field" id="js-field__r-pass" />
-    <button id="js-btn" class="ui-button --usr-new" th:href="@{/index}"></button>
+    <button id="js-btn" class="ui-button --usr-new" href="/index" ></button>
+
+
   </form>
 </div>
 
