完成商品展示页面接口

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -85,7 +85,7 @@ a:hover{
     height: 97px;
     margin: 0;
     padding-bottom: 7px;
-    background: url("../images/top.png") repeat-x left bottom;
+    background: url("../images/png") repeat-x left bottom;
 }
 #header div.main-top{
     width: 1211px;
