--- a/src/main/resources/templates/center.html
+++ b/src/main/resources/templates/center.html
@@ -20,18 +20,18 @@
                 <li class="personal-title ">
                    个人中心
                 </li>
-                <li ><a href="/kknq/happiness" >个人资料</a></li>
-                <li><a href="/kknq/happiness" >我的订单</a></li>
-                <li><a href="/kknq/happiness" >我的积分</a></li>
-                <li><a href="/kknq/happiness" >会员信息</a></li>
-                <li><a href="/kknq/happiness" >我的资金</a></li>
-                <li><a href="/kknq/happiness" >在线充值</a></li>
-                <li><a href="/kknq/happiness" >代金券</a></li>
-                <li><a href="/kknq/happiness" >收货地址</a></li>
-                <li><a href="/kknq/happiness" >我的纪念日</a></li>
-                <li><a href="/kknq/happiness" >密码维护</a></li>
-                <li><a href="/kknq/happiness" >我的故事</a></li>
-                <li><a href="/kknq/happiness" >上传故事</a></li>
+                <li ><a href="/kknq/vip/details" >个人资料</a></li>
+                <li><a href="/kknq/vip/orders" >我的订单</a></li>
+                <li><a href="/kknq/vip/score" >我的积分</a></li>
+                <li><a href="/kknq/vip/information" >会员信息</a></li>
+                <li><a href="/kknq/vip/money" >我的资金</a></li>
+                <li><a href="/kknq/vip/recharge" >在线充值</a></li>
+                <li><a href="/kknq/vip/voucher" >代金券</a></li>
+                <li><a href="/kknq/vip/location" >收货地址</a></li>
+                <li><a href="/kknq/vip/date" >我的纪念日</a></li>
+                <li><a href="/kknq/vip/findpsd" >密码维护</a></li>
+                <li><a href="/kknq/vip/story" >我的故事</a></li>
+                <li><a href="/kknq/vip/upload" >上传故事</a></li>
             </ul>
         </div>
         <div class="personal-rt lf">
