--- a/src/main/resources/templates/vip-home2.html
+++ b/src/main/resources/templates/vip-home2.html
@@ -22,7 +22,7 @@
 <!--section-->
 <section id="section">
     <div id="loc">
-        <a href="index.html">首页</a>
+        <a href="/kknq/index">首页</a>
         > 会员申请
     </div>
     <div class="p-bg vip-info">
