--- a/src/main/resources/templates/centerRecharge.html
+++ b/src/main/resources/templates/centerRecharge.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>YummyCake定制属于您的专属蛋糕</title>
-    <link rel="stylesheet" type="text/css" href="css/common.css">
-    <link rel="stylesheet" type="text/css" href="css/center.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/center.css}">
 </head>
 <body>
 
 <header id="header"></header>
 <section id="section">
     <div id="loc">
-        <a href="index.html">首页</a>
-        ><a href="center.html">个人中心</a>
+        <a th:href="@{/index}">首页</a>
+        ><a th:href="@{/center}">个人中心</a>
         >在线充值
     </div>
     <div class="over">
@@ -21,18 +21,18 @@
                 <li class="personal-title ">
                     个人中心
                 </li>
-                <li ><a href="centerPerson.html" >个人资料</a></li>
-                <li><a href="centerOrder.html" >我的订单</a></li>
-                <li><a href="centerScore.html" >我的积分</a></li>
-                <li><a href="centerVip.html" >会员信息</a></li>
-                <li><a href="centerMoney.html" >我的资金</a></li>
-                <li><a href="centerRecharge.html" class="active1">在线充值</a></li>
-                <li><a href="centerVoucher.html" >代金券</a></li>
-                <li><a href="centerLocation.html" >收货地址</a></li>
-                <li><a href="centerDate.html" >我的纪念日</a></li>
-                <li><a href="centerPwd.html" >密码维护</a></li>
-                <li><a href="centerStroy.html" >我的故事</a></li>
-                <li><a href="upload.html" >上传故事</a></li>
+                <li ><a href="/kknq/vip/details" >个人资料</a></li>
+                <li><a href="/kknq/vip/orders" >我的订单</a></li>
+                <li><a href="/kknq/vip/score" >我的积分</a></li>
+                <li><a href="/kknq/vip/information" >会员信息</a></li>
+                <li><a href="/kknq/vip/money" >我的资金</a></li>
+                <li><a href="/kknq/vip/recharge" >在线充值</a></li>
+                <li><a href="/kknq/vip/voucher" >代金券</a></li>
+                <li><a href="/kknq/vip/location" >收货地址</a></li>
+                <li><a href="/kknq/vip/date" >我的纪念日</a></li>
+                <li><a href="/kknq/vip/findpsd" >密码维护</a></li>
+                <li><a href="/kknq/vip/story" >我的故事</a></li>
+                <li><a href="/kknq/vip/upload" >上传故事</a></li>
             </ul>
         </div>
         <div class="personal-rt lf">
@@ -51,8 +51,8 @@
 
 <footer id="footer">
 </footer>
-<script src="js/jquery.js"></script>
-<script src="js/common.js"></script>
+<script th:href="@{/js/jquery.js}"></script>
+<script th:href="@{/js/common.js}"></script>
 <script>
 
 </script>
