--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>YummyCake定制属于您的专属蛋糕</title>
-    <link rel="stylesheet" type="text/css" href="css/common.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
     <!--<link rel="stylesheet" type="text/css" href="css/pay.css">-->
     <style>
         #section{
@@ -34,8 +34,8 @@
 <header id="header"></header>
 <section id="section">
     <div id="loc">
-        <a href="index.html">首页</a>
-        > <a href="centerOrder.html">我的订单</a>
+        <a th:href="@{/index}">首页</a>
+        > <a th:href="@{/order}">我的订单</a>
         >订单详情
     </div>
     <div class="pay-details">
@@ -74,8 +74,8 @@
 
 <footer id="footer">
 </footer>
-<script src="js/jquery.js"></script>
-<script src="js/common.js"></script>
+<script th:href="@{/js/jquery.js}"></script>
+<script th:href="@{/js/common.js}"></script>
 <script>
     $('#N_cancel').click(function (e) {
         e.preventDefault();
