--- a/src/main/resources/templates/vip-home3.html
+++ b/src/main/resources/templates/vip-home3.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>YummyCake定制属于您的专属蛋糕</title>
-    <link type="text/css" href="css/common.css" rel="stylesheet" />
-    <link type="text/css" href="css/style.css" rel="stylesheet" />
+    <link type="text/css" th:href="@{/css/common.css}" rel="stylesheet" />
+    <link type="text/css" th:href="@{/css/style.css}" rel="stylesheet" />
     <style>
         #section{
             width: 1100px;
@@ -32,7 +32,7 @@
 <!--section-->
 <section id="section">
     <div id="loc">
-        <a href="index.html">首页</a>
+        <a th:href="@{/index}">首页</a>
         >VIP会员专享
     </div>
     <!--中间nav-->
@@ -85,9 +85,9 @@
 
 </footer>
 
-<script src="js/jquery.js"></script>
-<script src="js/common.js"></script>
-<script src="js/bootstrap.js"></script>
-<script src="js/vip.js"></script>
+<script th:href="@{/js/jquery.js}"></script>
+<script th:href="@{/js/common.js}"></script>
+<script th:href="@{/js/bootstrap.js}"></script>
+<script th:href="@{/js/vip.js}"></script>
 </body>
 </html>
