修改超链接

--- a/src/main/resources/templates/centerPerson.html
+++ b/src/main/resources/templates/centerPerson.html
@@ -11,8 +11,8 @@
 <header id="header"></header>
 <section id="section">
     <div id="loc">
-        <a href="index.html">首页</a>
-        > <a href="center.html">个人中心</a>
+        <a th:href="@{/index}">首页</a>
+        > <a th:href="@{/center}">个人中心a</a>
         >个人资料
     </div>
     <div class="over">
