--- a/src/main/resources/templates/centerStroy.html
+++ b/src/main/resources/templates/centerStroy.html
@@ -59,7 +59,7 @@
                         <!--</tr>-->
                     </tbody>
                 </table>
-                <p class="f14  text-center mt20">你还没有上传过故事，需要上传故事可点击这里  <a th:href="@{/upload}" class="active">上传故事</a></p>
+                <p class="f14  text-center mt20">你还没有上传过故事，需要上传故事可点击这里  <a th:href="@{/vip/upload}" class="active">上传故事</a></p>
             </div>
         </div>
     </div>
