--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -54,25 +54,25 @@
 <span>
 
 </span>
-<table width="95%" border="0" align="center" cellpadding="0" cellspacing="0">
-    <tr>
-        <td height="33">
-            <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" class="right-font08">
-                <tr>
-                    <td width="48%" align="center">[<a th:href="@{/cake(sort='9',pageNum='2',pageSize='20')}" class="right-font08">首页</a> | <a href="${pageContext.request.contextPath }/goods/getGoodsList?currentPage=${page.currentPage-1}" onclick="return checkFirst()" class="right-font08">上一页</a> | <a href="${pageContext.request.contextPath }/goods/getGoodsList?currentPage=${page.currentPage+1}" onclick="return checkNext()" class="right-font08">下一页</a> | <a href="${pageContext.request.contextPath }/goods/getGoodsList?currentPage=${page.totalPage}" class="right-font08">末页</a>] 转至：<input id="inputPage" name="textfield3" type="text" class="right-textfield03" size="3" /><input id="go" name="Submit23222" type="button" class="button08" value="GO" onclick="pageGo();" /></td>
-                    <td width="5%" align="center">
-                        <!--<table width="20" border="0" cellspacing="0" cellpadding="0" >-->
-                            <!--<tr>-->
-                                <!--<td width="1%"><input id="inputPage" name="textfield3" type="text" class="right-textfield03" size="3" /></td>-->
-                                <!--<td width="87%" ><input id="go" name="Submit23222" type="button" class="button08" value="GO" onclick="pageGo();" /></td>-->
-                            <!--</tr>-->
-                        <!--</table>-->
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-</table>
+<!--<table width="95%" border="0" align="center" cellpadding="0" cellspacing="0">-->
+    <!--<tr>-->
+        <!--<td height="33">-->
+            <!--<table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" class="right-font08">-->
+                <!--<tr>-->
+                    <!--<td width="48%" align="center">[<a th:href="@{/cake(sort='9',pageNum='2',pageSize='20')}" class="right-font08">首页</a> | <a href="${pageContext.request.contextPath }/goods/getGoodsList?currentPage=${page.currentPage-1}" onclick="return checkFirst()" class="right-font08">上一页</a> | <a href="${pageContext.request.contextPath }/goods/getGoodsList?currentPage=${page.currentPage+1}" onclick="return checkNext()" class="right-font08">下一页</a> | <a href="${pageContext.request.contextPath }/goods/getGoodsList?currentPage=${page.totalPage}" class="right-font08">末页</a>] 转至：<input id="inputPage" name="textfield3" type="text" class="right-textfield03" size="3" /><input id="go" name="Submit23222" type="button" class="button08" value="GO" onclick="pageGo();" /></td>-->
+                    <!--<td width="5%" align="center">-->
+                        <!--&lt;!&ndash;<table width="20" border="0" cellspacing="0" cellpadding="0" >&ndash;&gt;-->
+                            <!--&lt;!&ndash;<tr>&ndash;&gt;-->
+                                <!--&lt;!&ndash;<td width="1%"><input id="inputPage" name="textfield3" type="text" class="right-textfield03" size="3" /></td>&ndash;&gt;-->
+                                <!--&lt;!&ndash;<td width="87%" ><input id="go" name="Submit23222" type="button" class="button08" value="GO" onclick="pageGo();" /></td>&ndash;&gt;-->
+                            <!--&lt;!&ndash;</tr>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</table>&ndash;&gt;-->
+                    <!--</td>-->
+                <!--</tr>-->
+            <!--</table>-->
+        <!--</td>-->
+    <!--</tr>-->
+<!--</table>-->
 
 <!--<script th:href="@{/js/jquery.js}" ></script>-->
 <!--<script th:href="@{/js/jquery.fly.min.js}" ></script>-->
