--- a/src/main/resources/templates/payCart.html
+++ b/src/main/resources/templates/payCart.html
@@ -38,8 +38,10 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td><a href="#"><img src="images/lang01.jpg" style="width: 100px;height: 100px;"></a></td>
-                    <td><a href="#">STARRY SKY星空</a></td>
+                    <td><a href="#">
+                        <!--<img src="images/lang01.jpg" style="width: 100px;height: 100px;">-->
+                        <img  class="ca-img"></a></td>
+                    <td><a href="#" class="ca-title">STARRY SKY星空</a></td>
                     <td>2.0磅 / 10份 标配餐具</td>
                     <td>￥<span class="pri">308</span>.00 元</td>
                     <td><div class="rt-sum"><a href="#" class="cut">-</a><input type="text" value="1" class="num1" disabled><a href="#" class="add">+</a></div></td>
@@ -68,8 +70,8 @@
 
 <footer id="footer">
 </footer>
-<script src="../static/js/jquery.js"></script>
-<script src="../static/js/common.js"></script>
+<script th:src="@{js/jquery.js}"></script>
+<script th:src="@{js/common.js}"></script>
 <script>
     $(function () {
 //       如果未登陆  弹出登陆注册模态框
@@ -77,7 +79,7 @@
 //        删除
         $('table tbody tr td:last-child a').click(function (e) {
             e.preventDefault();
-            if (confirm("您确定要讲这样商品删除吗")) {
+            if (confirm("您确定要将这个商品删除吗")) {
                 $(this).parent().parent().remove();
                 //            当购物车中没有商品时
                 if ($('table tbody tr').length < 3) {
@@ -101,6 +103,39 @@
 //            }
 //        });
     })
+
+    $(function(){
+        init();
+//        初始化页面
+        var str = location.href; //取得整个地址栏
+        var num = str.indexOf("?");
+        str = str.substr(num+1);
+        $.ajax({
+                   type:"GET",
+                   url:"/kknq/get/cake",
+                   data:str,
+                   dataType: 'json',
+                   success:function (response) {
+                       var json = JSON.stringify(response);
+                       var product = eval("("+json+")");
+                       if(product.type == 6 || product.type == 7){
+                           $('.rt-size').html('<a href="#" class="active">1.0磅</a>');
+                       }
+                       $('.ca-img').attr('src',product.productImgUrl);
+                       $('.ca-title').text(product.productTitle);
+//                       $('.rt-info').text(product.productName);
+                       $('.pri').text("价格：¥ "+product.price+" RMB");
+//                       $('.psmell').text(product.productSmell);
+//                       $('.psort').text(product.productSort);
+//                       $('.pmaterial').text(product.productTitle);
+//                       $('.addCar').html(`<a href="#" class="addCar" data-id="${product.productId}">加入购物车</a>`);
+//                       $('.index').html(product.productTitle);
+//                       $('#initPrice').text(product.price);
+
+                       //        修改商品详情信息（数据库还需搭建）
+                   }
+               });
+
 </script>
 </body>
 </html>
